# libubre

./: .gitignore  .gitmodules  CMakeLists.txt  env.set.sh  prepare.sh
cmd/compilation/: codesize_large.cpp  computation.cpp  computation_io.cpp  computation_storage.cpp  io.cpp  storage.cpp  storage_io.cpp
cmd/dummy_neb/: dummy_callback.cpp  dummy_callback.h  main.cpp
cmd/experiment/: CMakeLists.txt  libnbre_ar.cpp  libnbre_decycle.cpp  libnbre_depend.cpp  libnbre_nr.cpp  libnbre_version.cpp
cmd/nasir/: main.cpp
cmd/nbre/: main.cpp
common/: address.h
core/net_ipc/: ipc_interface.cpp
fs/blockchain/: blockchain_api_test.cpp
fs/ir_manager/: ir_manager.cpp  ir_manager.h  ir_manager_helper.cpp  ir_manager_helper.h
fs/proto/: block.pb.cc  block.pb.h  dag.pb.cc  dag.pb.h  dynasty.pb.cc  dynasty.pb.h  genesis.pb.cc  genesis.pb.h  ir.pb.cc  ir.pb.h  prepare.sh  state.pb.cc  state.pb.h  trie.pb.cc  trie.pb.h
ir/auth_table/: auth.cpp
ir/dip/: dip_release_v1.cpp  nasir_dip_release_v1.json
ir/experiment/: address.cpp  ar.cpp  decycle.cpp  depend.cpp  dip.cpp  memory.cpp  nasir_address.json  nasir_common_lib.json  nasir_decycle.json  (+3 more)
ir/experiment-bak/: exp_1.json  libnbre_large.json  libnbre_middle.cpp  libnbre_middle.json  storage_io.json
jit/: jit_driver.h  jit_engine.h
logs/: README  counter.py
nbre/cmd/experiment/: CMakeLists.txt  compilation_time.cpp  execution_time.cpp  libnbre_address.cpp  libnbre_ar.cpp  libnbre_decycle.cpp  libnbre_depend.cpp  libnbre_dip.cpp  libnbre_memory.cpp  libnbre_version.cpp  rw_time.cpp
util/: singleton.h
(+77 files in other folders)
